syntax = "proto3";

package wfa.measurement.internal.db.gcp;

option java_package = "org.wfanet.measurement.internal.db.gcp";
option java_multiple_files = true;

// Details about a computation at a MPC Worker Node.
message ComputationDetails {
  enum RoleInComputation {
    // Never set intentionally
    UNKNOWN = 0;
    // The primary duchy for the computation.
    PRIMARY = 1;
    // A non-primary duchy for the computation. This duchy has to do many
    // crypto operations, but is not responsible for joining sketch positions
    // together, nor computing the final results.
    SECONDARY = 2;
  }
  // The duchy's role in the computation.
  RoleInComputation role = 1;
  // The domain name of the duchy from which this one receives data for the
  // computation.
  string incoming_node_id = 2;
  // The domain name of the duchy where outputs are sent for the computation.
  string outgoing_node_id = 3;
  // A prefix of all the BLOBs stored for this computation. This is used for
  // cleaning up after a computation when the BLOBs are no longer needed.
  string blobs_storage_prefix = 4;

  enum CompletedReason {
    UNSPECIFIED = 0;
    // The computation finished successfully with no errors.
    SUCCEEDED = 1;
    // The computation failed and will not be retried any longer.
    FAILED = 2;
    // The kingdom no longer wanted the results of the computation.
    CANCELED = 3;
  }
  // The final state of the computation at this duchy. This is only set
  // when the protocol has finished for the computation.
  CompletedReason ending_state = 5;
}